--- a/Resources/Private/Language/it.locallang_be.xlf
+++ b/Resources/Private/Language/it.locallang_be.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" target-language="it" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2021-05-27T09:59:17Z" product-name="fp_newsletter">
+	<file source-language="en" target-language="it" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2022-01-10T13:21:11Z" product-name="fp_newsletter">
 		<header/>
 		<body>
 			<trans-unit id="title" resname="title">
@@ -162,6 +162,14 @@
 			<trans-unit id="settings.parameters.email" resname="settings.parameters.email">
 				<source>Input-field name for the email-address (e.g. tx_myshop_pi1|newBestellung|email)</source>
 				<target>Nome del campo di input per l'indirizzo e-mail (p.e. tx_myshop_pi1|newBestellung|email)</target>
+			</trans-unit>
+			<trans-unit id="dashboard.widget.fixpunktRecentLogEntries.title" resname="dashboard.widget.fixpunktRecentLogEntries.title">
+				<source>fp_newsletter: recent 7 log entries</source>
+				<target>fp_newsletter: 7 voci di registro recenti</target>
+			</trans-unit>
+			<trans-unit id="dashboard.widget.fixpunktRecentLogEntries.description" resname="dashboard.widget.fixpunktRecentLogEntries.description">
+				<source>Shows date, name, email and status of the last entries</source>
+				<target>Mostra la data, il nome, l'e-mail e lo stato delle ultime voci</target>
 			</trans-unit>
 		</body>
 	</file>
