--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,196 +1,202 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2018-06-15T15:10:55Z" product-name="fp_newsletter">
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+	<file source-language="en" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang.xlf" date="2022-01-10T13:22:58Z" product-name="fp_newsletter">
 		<header/>
 		<body>
-			<trans-unit id="tx_fp_newsletter_domain_model_pi1">
+			<trans-unit id="tx_fp_newsletter_domain_model_pi1" resname="tx_fp_newsletter_domain_model_pi1">
 				<source>Newsletter subscriber management</source>
 			</trans-unit>
-			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description">
+			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description" resname="tx_fp_newsletter_domain_model_pi1.description">
 				<source>Plugin for newsletter subscription and unsubscription. Used table: tt_address. A log is written.</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log">
+			<trans-unit id="tx_fpnewsletter_domain_model_log" resname="tx_fpnewsletter_domain_model_log">
 				<source>Log</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gender">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.date" resname="tx_fpnewsletter_domain_model_log.date">
+				<source>Date</source>
+			</trans-unit>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.name" resname="tx_fpnewsletter_domain_model_log.name">
+				<source>Name</source>
+			</trans-unit>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gender" resname="tx_fpnewsletter_domain_model_log.gender">
 				<source>Gender</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.title">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.title" resname="tx_fpnewsletter_domain_model_log.title">
 				<source>Title</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.firstname">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.firstname" resname="tx_fpnewsletter_domain_model_log.firstname">
 				<source>Firstname</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.lastname">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.lastname" resname="tx_fpnewsletter_domain_model_log.lastname">
 				<source>Lastname</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.email">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.email" resname="tx_fpnewsletter_domain_model_log.email">
 				<source>E-Mail</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.address">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.address" resname="tx_fpnewsletter_domain_model_log.address">
 				<source>Address</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.zip">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.zip" resname="tx_fpnewsletter_domain_model_log.zip">
 				<source>Zip</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.city">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.city" resname="tx_fpnewsletter_domain_model_log.city">
 				<source>City</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.region">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.region" resname="tx_fpnewsletter_domain_model_log.region">
 				<source>Region</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.country">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.country" resname="tx_fpnewsletter_domain_model_log.country">
 				<source>Country</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.phone">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.phone" resname="tx_fpnewsletter_domain_model_log.phone">
 				<source>Phone</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.mobile">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.mobile" resname="tx_fpnewsletter_domain_model_log.mobile">
 				<source>Mobile</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.fax">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.fax" resname="tx_fpnewsletter_domain_model_log.fax">
 				<source>Fax</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.www">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.www" resname="tx_fpnewsletter_domain_model_log.www">
 				<source>WWW</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.position">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.position" resname="tx_fpnewsletter_domain_model_log.position">
 				<source>Position</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.company">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.company" resname="tx_fpnewsletter_domain_model_log.company">
 				<source>Company</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.categories">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.categories" resname="tx_fpnewsletter_domain_model_log.categories">
 				<source>Categories (comma separated)</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.status">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status" resname="tx_fpnewsletter_domain_model_log.status">
 				<source>Status</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.securityhash">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.securityhash" resname="tx_fpnewsletter_domain_model_log.securityhash">
 				<source>Security-hash</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.retoken">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.retoken" resname="tx_fpnewsletter_domain_model_log.retoken">
 				<source>reCaptcha-token</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.mathcaptcha">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.mathcaptcha" resname="tx_fpnewsletter_domain_model_log.mathcaptcha">
 				<source>Spam protection</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.xcaptcha">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.xcaptcha" resname="tx_fpnewsletter_domain_model_log.xcaptcha">
 				<source>enter the result of x</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr" resname="tx_fpnewsletter_domain_model_log.gdpr">
 				<source>GDPR</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr_desc1">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr_desc1" resname="tx_fpnewsletter_domain_model_log.gdpr_desc1">
 				<source>I agree that the operator and publisher may inform me about selected topics. My data is used exclusively for this purpose. In particular, no disclosure to unauthorized third parties. I am aware that I can revoke my consent at any time with effect for the future. The</source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr_link_text">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr_link_text" resname="tx_fpnewsletter_domain_model_log.gdpr_link_text">
 				<source> Privacy Policy </source>
 			</trans-unit>
-			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr_desc2">
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr_desc2" resname="tx_fpnewsletter_domain_model_log.gdpr_desc2">
 				<source>applies, which also includes other information about how to correct, delete and block my data.</source>
 			</trans-unit>
-			<trans-unit id="subscribe">
+			<trans-unit id="subscribe" resname="subscribe">
 				<source>Subscribe</source>
 			</trans-unit>
-			<trans-unit id="unsubscribe">
+			<trans-unit id="unsubscribe" resname="unsubscribe">
 				<source>Unsubscribe</source>
 			</trans-unit>
-			<trans-unit id="unsubscribe_head">
+			<trans-unit id="unsubscribe_head" resname="unsubscribe_head">
 				<source>Unsubscribe from the newsletter</source>
 			</trans-unit>
-			<trans-unit id="go_back">
+			<trans-unit id="go_back" resname="go_back">
 				<source>go back</source>
 			</trans-unit>
-			<trans-unit id="email_send1">
+			<trans-unit id="email_send1" resname="email_send1">
 				<source>An email has been send to you. Please verify your email-address for the newsletter subscription.</source>
 			</trans-unit>
-			<trans-unit id="email_send2">
+			<trans-unit id="email_send2" resname="email_send2">
 				<source>An email has been send to you. Please verify your email-address for the newsletter unsubscription.</source>
 			</trans-unit>
-			<trans-unit id="email_verified">
+			<trans-unit id="email_verified" resname="email_verified">
 				<source>Your email-address is now verfied. You are now subscribed to our newsletter with:</source>
 			</trans-unit>
-			<trans-unit id="email_verified2">
+			<trans-unit id="email_verified2" resname="email_verified2">
 				<source>Your email-address is now verfied. You are now unsubscribed from our newsletter with:</source>
 			</trans-unit>
-			<trans-unit id="email_removed">
+			<trans-unit id="email_removed" resname="email_removed">
 				<source>You have unsubscribed our newsletter successfully.</source>
 			</trans-unit>
-			<trans-unit id="wrong_parameters">
+			<trans-unit id="wrong_parameters" resname="wrong_parameters">
 				<source>Error: wrong parameters in the link.</source>
 			</trans-unit>
-			<trans-unit id="wrong_uid">
+			<trans-unit id="wrong_uid" resname="wrong_uid">
 				<source>Error: no entry for the given uid found.</source>
 			</trans-unit>
-			<trans-unit id="wrong_hash">
+			<trans-unit id="wrong_hash" resname="wrong_hash">
 				<source>Error: the given hash in the link is wrong.</source>
 			</trans-unit>
-			<trans-unit id="wrong_expired">
+			<trans-unit id="wrong_expired" resname="wrong_expired">
 				<source>Error: the link is expired!</source>
 			</trans-unit>
-			<trans-unit id="wrong_verified">
+			<trans-unit id="wrong_verified" resname="wrong_verified">
 				<source>Error: you have verified this email-address already!</source>
 			</trans-unit>
-			<trans-unit id="wrong_subscribed">
+			<trans-unit id="wrong_subscribed" resname="wrong_subscribed">
 				<source>Error: you are already subscribed to our newsletter!</source>
 			</trans-unit>
-			<trans-unit id="wrong_unsubscribed">
+			<trans-unit id="wrong_unsubscribed" resname="wrong_unsubscribed">
 				<source>Error: you are not subscribed, so you can not be unsubscribed!</source>
 			</trans-unit>
-			<trans-unit id="wrong_unsubscribed_parameters">
+			<trans-unit id="wrong_unsubscribed_parameters" resname="wrong_unsubscribed_parameters">
 				<source>Error: missing or wrong parameters for unsubcription!</source>
 			</trans-unit>
-			<trans-unit id="wrong_user">
+			<trans-unit id="wrong_user" resname="wrong_user">
 				<source>Error: user not found! Maybe you are already unsubscribed.</source>
 			</trans-unit>
-			<trans-unit id="wrong_email">
+			<trans-unit id="wrong_email" resname="wrong_email">
 				<source>Error: the given email-address is not valid!</source>
 			</trans-unit>
-			<trans-unit id="wrong_captcha">
+			<trans-unit id="wrong_captcha" resname="wrong_captcha">
 				<source>Error: the captcha is not valid!</source>
 			</trans-unit>
-			<trans-unit id="wrong_honeypot">
+			<trans-unit id="wrong_honeypot" resname="wrong_honeypot">
 				<source>Error: spam detected (honeypot)!</source>
 			</trans-unit>
-			<trans-unit id="wrong_insert">
+			<trans-unit id="wrong_insert" resname="wrong_insert">
 				<source>Error: sql insert error!</source>
 			</trans-unit>
-			<trans-unit id="required">
+			<trans-unit id="required" resname="required">
 				<source>required.</source>
 			</trans-unit>
-			<trans-unit id="errors">
+			<trans-unit id="errors" resname="errors">
 				<source>Error: please note this messages:</source>
 			</trans-unit>
-			<trans-unit id="error_email">
+			<trans-unit id="error_email" resname="error_email">
 				<source>- you need to enter an valid email-address!</source>
 			</trans-unit>
-			<trans-unit id="error_gdpr">
+			<trans-unit id="error_gdpr" resname="error_gdpr">
 				<source>- you need to accept the GDPR!</source>
 			</trans-unit>
-			<trans-unit id="error_not_here">
+			<trans-unit id="error_not_here" resname="error_not_here">
 				<source>Error: this point should not be reached!</source>
 			</trans-unit>
-			<trans-unit id="email.dear-gender-first-and-last-name">
+			<trans-unit id="email.dear-gender-first-and-last-name" resname="email.dear-gender-first-and-last-name">
 				<source>Dear %s %s %s,</source>
 			</trans-unit>
-			<trans-unit id="email.dear-first-and-last-name">
+			<trans-unit id="email.dear-first-and-last-name" resname="email.dear-first-and-last-name">
 				<source>Dear %s %s,</source>
 			</trans-unit>
-			<trans-unit id="email.dear-first-name">
-				<target>Dear %s,</target>
+			<trans-unit id="email.dear-first-name" resname="email.dear-first-name">
+				<source>Dear %s,</source>
 			</trans-unit>
-			<trans-unit id="email.dear">
+			<trans-unit id="email.dear" resname="email.dear">
 				<source>Hello,</source>
 			</trans-unit>
-			<trans-unit id="email.gender-first-and-last-name">
-				<target> %s %s %s</target>
+			<trans-unit id="email.gender-first-and-last-name" resname="email.gender-first-and-last-name">
+				<source> %s %s %s</source>
 			</trans-unit>
-			<trans-unit id="email.first-and-last-name">
-				<target> %s %s</target>
+			<trans-unit id="email.first-and-last-name" resname="email.first-and-last-name">
+				<source> %s %s</source>
 			</trans-unit>
-			<trans-unit id="email.first-name">
-				<target> %s</target>
+			<trans-unit id="email.first-name" resname="email.first-name">
+				<source> %s</source>
 			</trans-unit>
 		</body>
 	</file>
