--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -8,8 +8,8 @@
 				<target>Newsletter-Abonnenten-Management</target>
 			</trans-unit>
 			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description" resname="tx_fp_newsletter_domain_model_pi1.description">
-				<source>Plugin for newsletter subscription and unsubscription. Used table: tt_address. A log is written.</source>
-				<target>Datenschutzkonformes Plugin für direct_mail An- und Abmeldungen via tt_address.</target>
+				<source>Plugin for newsletter subscription and unsubscription. Used table: tt_address or fe_users. A log is written.</source>
+				<target>Datenschutzkonformes Plugin für Newsletter-An- und Abmeldungen via tt_address oder fe_users.</target>
 			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log" resname="tx_fpnewsletter_domain_model_log">
 				<source>Log</source>
