--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -7,7 +7,7 @@
 				<target>Newsletter-Abonnenten-Management</target>
 			</trans-unit>
 			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description">
-				<target>Datenschutzkonformes Plugin für direct_mail An- und Abmeldungen via tt_address.</target>
+				<target>Datenschutzkonformes Plugin für NL-An- und Abmeldungen via tt_address oder fe_users.</target>
 			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log">
 				<target>Log</target>
