--- a/Resources/Private/Language/it.locallang_be.xlf
+++ b/Resources/Private/Language/it.locallang_be.xlf
@@ -112,8 +112,8 @@
 				<target>Mostra un honeypot?</target>
 			</trans-unit>
 			<trans-unit id="settings.searchPidMode" resname="settings.searchPidMode">
-				<source>Search address in tt_address in all specified folders?</source>
-				<target>Cerca indirizzo in tt_address in tutte le cartelle specificate?</target>
+				<source>Search address in tt_address/fe_users in all specified folders?</source>
+				<target>Cerca indirizzo in tt_address/fe_users in tutte le cartelle specificate?</target>
 			</trans-unit>
 			<trans-unit id="settings.deleteMode" resname="settings.deleteMode">
 				<source>Hard or soft delete mode?</source>
