--- a/Resources/Private/Language/it.locallang.xlf
+++ b/Resources/Private/Language/it.locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" target-language="it" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang.xlf" date="2022-01-10T13:22:39Z" product-name="fp_newsletter">
+	<file source-language="en" target-language="it" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang.xlf" date="2022-02-09T10:53:59Z" product-name="fp_newsletter">
 		<header/>
 		<body>
 			<trans-unit id="tx_fp_newsletter_domain_model_pi1" resname="tx_fp_newsletter_domain_model_pi1">
@@ -234,6 +234,14 @@
 			<trans-unit id="error_not_here" resname="error_not_here">
 				<source>Error: this point should not be reached!</source>
 				<target>Errore generico</target>
+			</trans-unit>
+			<trans-unit id="missing_tt_address" resname="missing_tt_address">
+				<source>Error: the extension tt_address is required if you use settings.table=tt_address!</source>
+				<target>Errore: l'estensione tt_address è richiesta se si utilizza settings.table=tt_address!</target>
+			</trans-unit>
+			<trans-unit id="missing_direct_mail" resname="missing_direct_mail">
+				<source>Error: the extension direct_mail is required if you use settings.module_sys_dmail_html or settings.module_sys_dmail_category!</source>
+				<target>Errore: l'estensione direct_mail è richiesta se è impostato settings.module_sys_dmail_html!=-1 o settings.module_sys_dmail_category!</target>
 			</trans-unit>
 			<trans-unit id="email.dear-gender-first-and-last-name" resname="email.dear-gender-first-and-last-name">
 				<source>Dear %s %s %s,</source>
